CodeMirror 3.12~core1

	* Initial version imported into Core.
	-- Charlie Powell <charlie@eval.bz>  Wed, 15 May 2013 10:24:32 -0400
